2009-05-10  John Ralls  <john@manjusri.ceridwen.fremont.ca.us>

	* src/wxGuiTest/WxGuiTestApp.cpp (WxGuiTestApp::MainLoop):
	Reconfigured to work the way wxAppBase::MainLoop does, except with
	the option of using the TestEventLoop instead.

	* include/wxGuiTest/WxGuiTestApp.h (WxGuiTestApp::m_eventLoop):
	Removed, again. We only need m_mainLoop, now that I see how
	wxAppBase::MainLoop() actually works. 
	(WxGuiTestApp::ExitMainLoop, WxGuiTestApp::SetMainLoop),
	(WxGuiTestApp::GetMainLoop): Removed, superfluous with above change.

2009-05-09  John Ralls  <john@manjusri.ceridwen.fremont.ca.us>

	* src/wxGuiTest/WxGuiTestApp.cpp (WxGuiTestApp::MainLoop): 
	Run either the test loop (m_eventLoop) or the full loop
	(m_mainLoop) depending on the state of
	WxGuiTestHelper::GetInteractive().

2009-05-07  John Ralls  <john@manjusri.ceridwen.fremont.ca.us>

	* include/wxGuiTest/WxGuiTestApp.h (WxGuiTestApp::SetMainLoop),
	(WxGuiTestApp::GetMainLoop): New functions, to permit dependency
	injection of the event loop.

2009-05-05  John Ralls  <john@manjusri.ceridwen.fremont.ca.us>

	* src/wxGuiTest/WxGuiTestApp.cpp (WxGuiTestApp::postNextEvent):
	now returns false if the handler is NULL.

	* build/bakefile/wxGuiTesting.bkl: Removed the platform_flags
	template, which was present to support compiling in gtk.

	* configure.ac: Removed the call to AM_PATH_GTK_2_0; native events
	handling is abandoned, so it's not necessary.

	* bootstrap: Removed the path to the GTK aclocal directory, same
	reason as above.
	
2009-05-03  John Ralls  <john@manjusri.ceridwen.fremont.ca.us>

	* test/CppGuiTest/TestEventLoopTest: New Test Class

	* include/wxGuiTest/WxGuiTestApp.h (discardCurrentQueue): 
	(Dispatch): New member functions. 

2009-05-02  John Ralls  <john@manjusri.ceridwen.fremont.ca.us>

	* test/CppTest/EventQueueTest.h: New test class

2009-05-01  John Ralls  <john@manjusri.ceridwen.fremont.ca.us>
	* include/wxGuiTest/EventQueue.h: Moved from src because